frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend-deployment
  namespace: query-panel
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-panel-frontend
  template:
    metadata:
      labels:
        app: query-panel-frontend
    spec:
      tolerations:
        - key: "node-role"
          operator: "Equal"
          value: "worker"
          effect: "NoSchedule"
      containers:
      - name: query-panel-frontend
        #image: 683819934378.dkr.ecr.us-east-1.amazonaws.com/query-panel:imag-ui
        image: soniagurramavari/query-panel-frontend:v1 # ECR Image
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-service
  namespace: query-panel
spec:
  selector:
    app: query-panel-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  #type: NodePort
  type: ClusterIP
  #type: LoadBalancer
